force-app/main/default/objects/Payment_Method__c/fields/Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Status__c</fullName>
    <formula>IF( VALUE(  Card_Expiration_Year__c ) &lt; YEAR( TODAY() ),
 IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),
	IF( AND( VALUE( Card_Expiration_Month__c ) &lt; MONTH( TODAY() ),
		VALUE ( Card_Expiration_Year__c ) = YEAR( TODAY() )) ,
		IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays an icon indicating whether or not the payment method has expired.</inlineHelpText>
    <label>Expiration Status</label>
    <type>Text</type>
</CustomField>