force-app/main/default/objects/Payment_Method__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <formula>IF( VALUE( Card_Expiration_Year__c ) &lt; YEAR( TODAY() ),
TRUE,
IF( AND( VALUE( Card_Expiration_Month__c ) &lt; MONTH( TODAY() ),
VALUE ( Card_Expiration_Year__c ) = YEAR( TODAY() )) ,
TRUE,
FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsExpired</label>
    <type>Checkbox</type>
</CustomField>