force-app/main/default/objects/Payment_Method__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>