force-app/main/default/objects/Payment_Method__c/listViews/All_Expired_Cards.listView-meta.xml
<ListView>
    <fullName>All_Expired_Cards</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Card_Last_4_Digit__c</columns>
    <columns>Card_Expiration_Month__c</columns>
    <columns>Card_Expiration_Year__c</columns>
    <columns>Expiration_Status__c</columns>
    <columns>IsExpired__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Card_Last_4_Digit__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>IsExpired__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Expired Cards</label>
</ListView>